# desafio-claves

./: .gitignore  README.md  pyproject.toml  requirements.txt
key_exchange/: __init__.py  __main__.py  dukpt.py  kcv.py  kek.py  keyblock.py
tests/: test_dukpt.py  test_kcv.py  test_kek.py  test_keyblock.py  test_validation.py
