[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "key-exchange"
version = "1.0.0"
description = "Desafío Técnico MercadoPago — Intercambio de claves criptográficas"
requires-python = ">=3.9"
dependencies = [
    "cryptography>=42.0.0",
    "psec>=1.0.0",
    "dukpt>=1.0.0",
    "bitstring",
]

[project.scripts]
key-exchange = "key_exchange.__main__:main"
